Ajustando problema so subir para o Heroku